--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring :
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -19,3 +20,5 @@ spring :
   sql:
     init:
       mode: always
+server:
+  port: 8089
