--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,14 +11,14 @@ spring :
     database-platform: org.hibernate.dialect.MySQLDialect
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     generate-ddl: true
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
 server:
   port: 8089
