--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,19 +6,26 @@ spring :
     username: root
     password: 1234
 
+
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQLDialect
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     generate-ddl: true
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+
 #  sql:
 #    init:
 #      mode: always
+
+
 server:
   port: 8089
+
+
+
